--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="./scripts/index.js" defer></script>
-<script src="./scripts/validate.js" defer></script>
+<script type="module" src="./pages/index.js" defer></script>
+<script src="./components/validate.js" defer></script>
 
 <!--Относится к реализации пятого спринта-->
 <template class="card-template">
