--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                  required minlength="2" maxlength="200">
           <span class="popup__error" id="owner-description-error"></span>
         </label>
-        <button type="submit" class="button popup__button">Сохранить</button>
+        <button type="submit" id="btn-info" class="button popup__button">Сохранить</button>
       </form>
     </div>
   </div>
@@ -61,17 +61,17 @@
       <form class="popup__form" name="new-place" novalidate>
         <label class="popup__label">
           <input type="text" name="place-name" id="place-name"
-                 class="popup__input popup__input_type_card-name" placeholder="Название"
+                 class="popup__input popup__input_type_name" placeholder="Название"
                  required minlength="1" maxlength="30">
           <span class="popup__error" id="place-name-error"></span>
         </label>
         <label class="popup__label">
           <input type="url" name="link" id="place-link"
-                 class="popup__input popup__input_type_url" placeholder="Ссылка на картинку"
+                 class="popup__input popup__input_type_description" placeholder="Ссылка на картинку"
                  required>
           <span class="popup__error" id="place-link-error"></span>
         </label>
-        <button type="submit" class="button popup__button popup__button_disabled">Сохранить</button>
+        <button type="submit" id="btn-img" class="button popup__button">Сохранить</button>
       </form>
     </div>
   </div>
@@ -84,7 +84,6 @@
   </div>
 </div>
 <script type="module" src="./pages/index.js" defer></script>
-<script src="./components/validate.js" defer></script>
 
 <!--Относится к реализации пятого спринта-->
 <template class="card-template">
