--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
 <div class="page__content">
@@ -78,12 +77,11 @@
   <div class="popup popup_type_image">
     <div class="popup__content popup__content_content_image">
       <button type="button" class="popup__close"></button>
-      <img src="" alt="" class="popup__image">
+      <img class="popup__image">
       <p class="popup__caption"></p>
     </div>
   </div>
 </div>
-<script type="module" src="./pages/index.js" defer></script>
 
 <!--Относится к реализации пятого спринта-->
 <template class="card-template">
